--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,6 +41,9 @@ $gray-color: #ddd;
 $white-color: #fff;
 $transparent: transparent;
 $gray-dark: #666;
+$demi-rose: #f2dede;
+$demi-rose-1a: #ebccd1;
+$demi-green: #C1E1F1;
 // header
 .stage {
   background-image: image-url("bg.png");
@@ -258,7 +261,7 @@ $gray-dark: #666;
     .short-link-result {
       display: none;
       border: 1px solid $gray-color;
-      background: $transparent;
+      background: $white-color;
       padding: 20px 20px 20px 10px;
       border-radius: 5px;
       width: 50%;
@@ -269,13 +272,28 @@ $gray-dark: #666;
         }
         button {
           font-size: 10px;
-          padding: 2px 5px;
+          padding: 5px 10px;
           margin-left: 10px;
           text-transform: uppercase;
           border: 1px solid $primary-color;
           color: $primary-color;
           background: $transparent;
           border-radius: 3px;
+          &:hover {
+            color: $white-color;
+            background: $primary-color;
+          }
+        }
+        &.full-link {
+          a {
+            font-size: 12px;
+            color: $gray-dark;
+          }
+        }
+        &.result-notice {
+          width: 100%;
+          height: 20px;
+          overflow: hidden;
         }
       }
     }
@@ -333,6 +351,36 @@ $gray-dark: #666;
   }
 }
 
+#m-notice {
+  border-radius: 2px;
+  height: 60px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+
+  z-index: 10;
+  display: none;
+  p {
+    text-align: center;
+    line-height: 60px;
+    margin: 0px;
+    &.m-notice {
+      background: $demi-green;
+    }
+    &.m-alert {
+      background: $demi-rose;
+    }
+  }
+  span.close-notice {
+    position: absolute;
+    right: 15px;
+    bottom: 5px;
+    font-size: 1.2em;
+    cursor: pointer;
+    color: #666;
+  }
+}
+
 @media screen and (max-width: 768px) {
   body {
     overflow-x: hidden;
@@ -349,6 +397,13 @@ $gray-dark: #666;
       }
       .register {
         display: none;
+      }
+    }
+  }
+  .main {
+    .contain {
+      .short-link-result {
+        width: 70%;
       }
     }
   }
