--- a/app/views/links/_result.html.slim
+++ b/app/views/links/_result.html.slim
@@ -1,6 +1,6 @@
 p.result-notice =truncate(@link.domain, length: 80)
 p.full-link
-  a href="#{@link.full_link}" =truncate(@link.full_link, length: 80)
+  = link_to truncate(@link.full_link, length: 80), @link.full_link
 p
-  a.link-result href="#{@link.decorate.short_url}"  = @link.decorate.short_decorator_url
-  button.copy Copy
+  = link_to @link.decorate.short_decorator_url, @link.decorate.short_url, class: 'link-result', target: '_blank', rel: 'noopener'
+  button.m-link-result Copy
