--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -1,12 +1,8 @@
 .sidebar
   ul
     li
-      a href=""  Short link
+      = link_to "Short link", root_path
     li
-      a href=""  Anilyze
+      = link_to "Analyze", root_path
     li
-      a href="#"  Trending
-    li
-      a href=""  Short link
-    li
-      a href=""  Anilyze
+      = link_to "Trending", trending_index_path
