--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -24,4 +24,4 @@ header.header
             | #{current_user.name}
           = link_to '(Logout)', destroy_user_session_path, method: :delete, class: "logout"
         p.avatar
-          = gravatar_image_tag(current_user.name.gsub('spam', 'mdeering'), :alt => 'current_user.email')
+          = gravatar_image_tag(current_user.email.gsub('spam', 'mdeering'), alt: current_user.name)
