--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
     title Seminar RoR
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag "https://www.gstatic.com/charts/loader.js"
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     /! Latest compiled and minified CSS
     link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" /
@@ -13,7 +14,7 @@ html
     /! Latest compiled JavaScript
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /
-  meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" /
+    meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" /
   body
     = render "shared/notice"
     .stage
@@ -23,3 +24,19 @@ html
       = render partial: "layouts/footer"
     .stage-sidebar
       = render partial: "layouts/sidebar"
+
+    javascript:
+      $("#toggle-menu").click(function(e){
+        stage = $(".stage");
+        sidebar = $(".stage-sidebar");
+        if(stage.hasClass("open")) {
+          $("body").css("overflow-y", "scroll");
+          stage.removeClass("open");
+          sidebar.removeClass("sidebar-open");
+        } else {
+          $("body").css("overflow-y", "scroll");
+          stage.addClass("open");
+          sidebar.addClass("sidebar-open");
+          sidebar.css("height", $(window).outerHeight());
+        }
+      });
