add revert link

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -36,8 +36,9 @@ $gray-dark: #666;
   margin-left: 10px;
 }
 
-a.link-result {
+.link-result {
   color: $primary-color;
+  font-size: 12px;
 }
 
 .m-link-result {
