--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,7 +11,7 @@ header.header
         li
           = link_to "Short link", root_path
         li
-          = link_to "Analyze", root_path
+          = link_to "Analyze", revert_index_path
         li
           = link_to "Trending", trending_index_path
     .col-md-3.col-sm-4.register
