--- a/app/views/trending/_link.html.slim
+++ b/app/views/trending/_link.html.slim
@@ -6,4 +6,4 @@
     div
       time.m-time = link.decorate.created
       h4 = link.domain
-      p = link.decorate.short_decorator_url
+      p.link-result = link.decorate.short_decorator_url
