--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -268,7 +268,7 @@ $green: green;
       display: none;
       border: 1px solid $gray-color;
       background: $white-color;
-      padding: 20px 20px 20px 10px;
+      padding: 20px 20px 10px 10px;
       border-radius: 5px;
       width: 50%;
       margin: 20px auto;
@@ -286,6 +286,16 @@ $green: green;
           overflow: hidden;
         }
       }
+    }
+    .loading {
+      border: none;
+      display: block;
+      background-color: transparent;
+      width: 100px;
+      height: 100px;
+      padding: 0px;
+      background-image: image-url('loading.gif');
+      background-size: cover;
     }
   }
   .login {
