--- a/app/views/links/_form.html.slim
+++ b/app/views/links/_form.html.slim
@@ -1,3 +1,3 @@
-= form_for @link, html: { id:"shorten"}, remote: true do |f|
+= form_for @link, html: { id: 'shorten' }, remote: true do |f|
   = f.text_field :full_link, id:"shorten-link"
-  = f.button "Shorten", id:"shorten-submit"
+  = f.button 'Shorten', id: 'shorten-submit'
