--- a/app/views/links/_result.html.slim
+++ b/app/views/links/_result.html.slim
@@ -3,4 +3,6 @@ p.full-link
   = link_to @link.decorate.full, @link.full_link
 p
   = link_to @link.decorate.short_decorator_url, @link.decorate.short_url, class: 'link-result', target: '_blank', rel: 'noopener'
-  button.m-link-result Copy
+
+  button.m-link-result.clipboard-btn data-clipboard-text= @link.decorate.short_url
+    | Copy
